--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family:  'Montserrat', 'Cantarell', 'Caladea', sans-serif;
+    font-family:  'Noto Serif CJK SC', sans-serif;
     font-size: 20px;
     font-weight: 400;
 }
