--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,57 +1,42 @@
 * {
-    border: none;
-    border-radius: 0;
-    margin: 0;
-    padding: 0;
-    font-family: "FiraCode Nerd Font Mono",monospace;
-    font-size: 16px;
-    background-color: transparent;
-    min-height: 0;
+  color: rgb(205, 214, 244);
+  font-size: 16px;
 }
 
-label.module {
-    padding: 0 5px;
-}
-box.module button {
-    padding: 0 5px;
-}
-
-.bar1 {
-    background-color: transparent;
-
+window#waybar {
+  background-color: transparent;
+  font-family: "FiraCode Nerd Font Mono", monospace;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 
-
+#clock,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#wireplumber,
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#scratchpad,
+#power-profiles-daemon,
+#mpd,
+#bluetooth,
+#workspaces button {
+  background-color: rgba(43, 48, 59, 0.85);
+  border-radius: 10px;
+  margin: 2px 4px;
+  padding: 0 10px;
+}
 
 #workspaces button.focused {
-    outline: blueviolet solid 5px;
-    border-bottom: blueviolet solid 3px;
-    border-radius: 0;
-}
-
-#workspaces button{
-    margin: 0;
-}
-
-
-
-#pulseaudio-slider slider {
-    min-height: 0px;
-    min-width: 0px;
-    opacity: 0;
-    background-image: none;
-    border: none;
-    box-shadow: none;
-}
-#pulseaudio-slider trough {
-    min-height: 10px;
-    min-width: 80px;
-    border-radius: 5px;
-    background-color: black;
-}
-#pulseaudio-slider highlight {
-    min-width: 10px;
-    border-radius: 5px;
-    background-color: green;
+  box-shadow: inset 0 -3px rgb(137, 180, 250);
 }
