--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -30,7 +30,7 @@ window#waybar {
 #power-profiles-daemon,
 #mpd,
 #bluetooth,
-#workspaces button {
+#workspaces {
   background-color: rgba(43, 48, 59, 0.85);
   border-radius: 10px;
   margin: 2px 4px;
@@ -40,3 +40,4 @@ window#waybar {
 #workspaces button.focused {
   box-shadow: inset 0 -3px rgb(137, 180, 250);
 }
+
