--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,15 +29,20 @@ window#waybar {
 #scratchpad,
 #power-profiles-daemon,
 #mpd,
-#bluetooth,
-#workspaces {
+#bluetooth {
   background-color: rgba(43, 48, 59, 0.85);
   border-radius: 10px;
   margin: 2px;
   padding: 0 10px;
 }
 
-#workspaces button.focused {
-  box-shadow: inset 0 -3px rgb(137, 180, 250);
+#workspaces {
+  background-color: rgba(43, 48, 59, 0.85);
+  margin: 2px;
+  border-radius: 10px;
 }
 
+#workspaces button.focused {
+  box-shadow: inset 0 -3px rgb(137, 180, 250);
+  border-radius: 10px;
+}
