--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,47 +1,35 @@
 * {
-  color: rgb(205, 214, 244);
+  all: unset;
+  font-family: "CaskaydiaMono Nerd Font Mono", monospace;
   font-size: 16px;
-}
-
-window#waybar {
-  background-color: transparent;
-  font-family: "FiraCode Nerd Font Mono", monospace;
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#mpd,
-#bluetooth {
-  background-color: rgba(43, 48, 59, 0.85);
   border-radius: 5px;
-  margin: 2px;
-  padding: 0 10px;
+}
+
+#waybar {
+  color: #cdd6f4;
+}
+
+.module {
+  margin-right: 3px;
+  background-color: #1e1e2e;
+  opacity: 0.8;
+  padding: 5px 10px;
+}
+
+#tray {
+  margin-right: 0px;
 }
 
 #workspaces {
-  background-color: rgba(43, 48, 59, 0.85);
-  margin: 2px;
-  border-radius: 5px;
+  background-color: #1e1e2e;
+  opacity: 0.8;
+  padding: 0px;
+}
+
+#workspaces button {
+  padding: 5px 10px;
 }
 
 #workspaces button.focused {
-  box-shadow: inset 0 -3px rgb(137, 180, 250);
+  box-shadow: inset 0 -3px #89b4fa;
 }
