--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -10,19 +10,20 @@
 }
 
 .module {
-  margin-right: 3px;
-  background-color: #1e1e2e;
-  opacity: 0.8;
+  margin-right: 4px;
+  background-color: #1a1b26;
+  opacity: 0.7;
   padding: 5px 10px;
 }
 
 #tray {
+  background-color: #74c7ec;
   margin-right: 0px;
 }
 
 #workspaces {
-  background-color: #1e1e2e;
-  opacity: 0.8;
+  background-color: #1a1b26;
+  opacity: 0.7;
   padding: 0px;
 }
 
@@ -31,5 +32,6 @@
 }
 
 #workspaces button.focused {
-  box-shadow: inset 0 -3px #89b4fa;
+  background-color: #7aa2f7;
+  color: #1e1e2e;
 }
