--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -11,19 +11,17 @@
 
 .module {
   margin-right: 4px;
-  background-color: #1a1b26;
-  opacity: 0.7;
+  background-color: rgba(26, 27, 38, 0.9);
   padding: 5px 10px;
 }
 
 #tray {
-  background-color: #7aa2f7;
+  background-color: rgba(122, 162, 247, 0.9);
   margin-right: 0px;
 }
 
 #workspaces {
-  background-color: #1a1b26;
-  opacity: 0.7;
+  background-color: rgba(26, 27, 38, 0.9);
   padding: 0px;
 }
 
@@ -32,6 +30,6 @@
 }
 
 #workspaces button.focused {
-  background-color: #7aa2f7;
+  background-color: rgba(122, 162, 247, 0.9);
   color: #1e1e2e;
 }
