--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -20,6 +20,17 @@
   margin-right: 0px;
 }
 
+menu {
+  border-radius: 5px;
+  background-color: rgba(26, 27, 38, 0.9);
+  padding: 5px 10px;
+}
+
+menuitem:hover {
+  background-color: rgba(122, 162, 247, 0.9);
+  color: #1e1e2e;
+}
+
 #workspaces {
   background-color: rgba(26, 27, 38, 0.9);
   padding: 0px;
